--- a/index.html
+++ b/index.html
@@ -503,10 +503,10 @@
                     <h3>7</h3>
                     <p>Domain Expertise Areas</p>
                 </div>
-                <div class="highlight-card">
+               <!-- <div class="highlight-card">
                     <h3>3</h3>
                     <p>Fortune 500 Companies</p>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
