--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         .section-subtitle {
             text-align: center;
             font-size: 1.1rem;
-            color: #6666;
+            color: #FFFF;
             margin-bottom: 3rem;
             max-width: 600px;
             margin-left: auto;
