--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
             <!-- Sales Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="main/images/SalesThumbnail.png" alt="Sales Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/SalesThumbnail.png" alt="Sales Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">                        
                         <p>Sales Dashboard Preview</p>
                     </div>
