--- a/index.html
+++ b/index.html
@@ -263,13 +263,15 @@
             overflow: hidden;
         }
 
-        .portfolio-thumbnail {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.5s ease;
-        }
-
+        
+.portfolio-thumbnail {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+  transition: transform 0.5s ease;
+}
         .portfolio-item:hover .portfolio-thumbnail {
             transform: scale(1.05);
         }
@@ -633,6 +635,7 @@
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
                     <img src="images/SalesThumbnail.png" alt="Sales Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/SalesThumbnail.png" alt="Sales Dashboard" style="max-width:100%; height:auto; display:block; margin:auto;" />
                     <div class="portfolio-image-placeholder">                        
                         <p>Sales Dashboard Preview</p>
                     </div>
