--- a/index.html
+++ b/index.html
@@ -264,12 +264,10 @@
         }
 
         .portfolio-thumbnail {
-          max-width: 100%;
-          height: auto;
-          object-fit: contain;
-          display: block;
-          margin: 0 auto;
-          transition: transform 0.5s ease;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.5s ease;
         }
 
         .portfolio-item:hover .portfolio-thumbnail {
@@ -635,7 +633,7 @@
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
                     <img src="images/SalesThumbnail.png" alt="Sales Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="portfolio-image-placeholder">                        
+                    <div class="portfolio-image-placeholder">
                         <p>Sales Dashboard Preview</p>
                     </div>
                 </div>
