--- a/index.html
+++ b/index.html
@@ -544,6 +544,16 @@
             .key-features {
                 grid-template-columns: 1fr;
             }
+
+            .portfolio-image-container {
+                height: 250px;
+                padding: 0.5rem;
+            }
+
+            .portfolio-thumbnail {
+                max-width: 100%;
+                border-radius: 4px;
+            }
         }
     </style>
 </head>
@@ -632,8 +642,9 @@
             <!-- Sales Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="images/SalesThumbnail.png" alt="Sales Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/SalesThumbnail.jpg" alt="Sales Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
+                        <span>📊</span>
                         <p>Sales Dashboard Preview</p>
                     </div>
                 </div>
