--- a/index.html
+++ b/index.html
@@ -642,9 +642,8 @@
             <!-- Sales Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="images/SalesThumbnail.jpg" alt="Sales Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/SalesThumbnail.png" alt="Sales Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
-                        <span>📊</span>
                         <p>Sales Dashboard Preview</p>
                     </div>
                 </div>
@@ -690,7 +689,7 @@
             <!-- Finance Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="images/finance-thumbnail.jpg" alt="Finance KPI Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/FinanceThumbnail.png" alt="Finance KPI Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
                         <span>💰</span>
                         <p>Finance Dashboard Preview</p>
