--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                         </div>
                     </div>
                     <div class="portfolio-actions">
-                        <a href="pdfs/sales-dashboard.pdf" target="_blank" class="preview-btn">
+                        <a href="pdfs/SalesDashboard.pdf" target="_blank" class="preview-btn">
                             <span>👁️</span> View Dashboard PDF
                         </a>
                     </div>
@@ -691,7 +691,6 @@
                 <div class="portfolio-image-container">
                     <img src="images/FinanceThumbnail.png" alt="Finance KPI Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
-                        <span>💰</span>
                         <p>Finance Dashboard Preview</p>
                     </div>
                 </div>
@@ -727,7 +726,7 @@
                         </div>
                     </div>
                     <div class="portfolio-actions">
-                        <a href="pdfs/finance-dashboard.pdf" target="_blank" class="preview-btn">
+                        <a href="pdfs/FinanceKPI_Base.pdf" target="_blank" class="preview-btn">
                             <span>👁️</span> View Dashboard PDF
                         </a>
                     </div>
@@ -737,9 +736,8 @@
             <!-- Banking Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="images/banking-thumbnail.jpg" alt="Banking Risk Analysis Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/Banking_NPA1.png" alt="Banking Risk Analysis Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
-                        <span>🏦</span>
                         <p>Banking Dashboard Preview</p>
                     </div>
                 </div>
@@ -775,7 +773,7 @@
                         </div>
                     </div>
                     <div class="portfolio-actions">
-                        <a href="pdfs/banking-dashboard.pdf" target="_blank" class="preview-btn">
+                        <a href="pdfs/Bank_Loan_Dashboard_NPA.pdf" target="_blank" class="preview-btn">
                             <span>👁️</span> View Dashboard PDF
                         </a>
                     </div>
@@ -785,9 +783,8 @@
             <!-- E-commerce Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="images/ecommerce-thumbnail.jpg" alt="E-commerce Sales Diagnostic Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/EcommerceThumbnail.png" alt="E-commerce Sales Diagnostic Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
-                        <span>🛒</span>
                         <p>E-commerce Dashboard Preview</p>
                     </div>
                 </div>
@@ -823,7 +820,7 @@
                         </div>
                     </div>
                     <div class="portfolio-actions">
-                        <a href="pdfs/ecommerce-dashboard.pdf" target="_blank" class="preview-btn">
+                        <a href="pdfs/ecommerce_sales_dashboard.pdf" target="_blank" class="preview-btn">
                             <span>👁️</span> View Dashboard PDF
                         </a>
                     </div>
@@ -833,9 +830,8 @@
             <!-- HR Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="images/hr-thumbnail.jpg" alt="HR Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/HRThumbnail.png" alt="HR Performance Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
-                        <span>👥</span>
                         <p>HR Dashboard Preview</p>
                     </div>
                 </div>
@@ -871,7 +867,7 @@
                         </div>
                     </div>
                     <div class="portfolio-actions">
-                        <a href="pdfs/hr-dashboard.pdf" target="_blank" class="preview-btn">
+                        <a href="pdfs/HR_Dashboard.pdf" target="_blank" class="preview-btn">
                             <span>👁️</span> View Dashboard PDF
                         </a>
                     </div>
@@ -881,9 +877,8 @@
             <!-- Hospital Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="images/hospital-thumbnail.jpg" alt="Hospital Analytics Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/HospitalThumbnail.png" alt="Hospital Analytics Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
-                        <span>🏥</span>
                         <p>Hospital Dashboard Preview</p>
                     </div>
                 </div>
@@ -919,7 +914,7 @@
                         </div>
                     </div>
                     <div class="portfolio-actions">
-                        <a href="pdfs/hospital-dashboard.pdf" target="_blank" class="preview-btn">
+                        <a href="pdfs/Hospital_Analytics_Dashboard.pdf" target="_blank" class="preview-btn">
                             <span>👁️</span> View Dashboard PDF
                         </a>
                     </div>
@@ -929,9 +924,8 @@
             <!-- Trading Dashboard -->
             <div class="portfolio-item">
                 <div class="portfolio-image-container">
-                    <img src="images/trading-thumbnail.jpg" alt="Positional Trading Strategy Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/TradingThumbnail.png" alt="Positional Trading Strategy Dashboard" class="portfolio-thumbnail" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="portfolio-image-placeholder">
-                        <span>📈</span>
                         <p>Trading Dashboard Preview</p>
                     </div>
                 </div>
@@ -967,7 +961,7 @@
                         </div>
                     </div>
                     <div class="portfolio-actions">
-                        <a href="pdfs/trading-dashboard.pdf" target="_blank" class="preview-btn">
+                        <a href="pdfs/Positional Trading Strategy.pdf" target="_blank" class="preview-btn">
                             <span>👁️</span> View Dashboard PDF
                         </a>
                     </div>
