--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         .section-subtitle {
             text-align: center;
             font-size: 1.1rem;
-            color: #666;
+            color: white;
             margin-bottom: 3rem;
             max-width: 600px;
             margin-left: auto;
