--- a/index.html
+++ b/index.html
@@ -551,8 +551,11 @@
             }
 
             .portfolio-image-container {
-                height: 250px;
-                padding: 0.5rem;
+              position: relative;
+              width: 100%;
+              min-height: 250px;
+              padding: 0.5rem;
+              overflow: hidden;
             }
 
             .portfolio-thumbnail {
