--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         .section-subtitle {
             text-align: center;
             font-size: 1.1rem;
-            color: white;
+            color: #666;
             margin-bottom: 3rem;
             max-width: 600px;
             margin-left: auto;
@@ -259,10 +259,16 @@
         .portfolio-image-container {
             position: relative;
             width: 100%;
-            height: 300px;
+            height: 450px;
             overflow: hidden;
+            background: #2c3e50;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 1.5rem;
         }
-            .portfolio-thumbnail {
+
+        .portfolio-thumbnail {
             max-width: 95%;
             max-height: 100%;
             width: auto;
@@ -390,7 +396,7 @@
             text-align: center;
         }
 
-           .preview-btn {
+        .preview-btn {
             display: inline-flex;
             align-items: center;
             gap: 0.5rem;
@@ -413,7 +419,6 @@
         .preview-btn span {
             font-size: 1.3rem;
         }
-
 
         .platforms {
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
@@ -551,11 +556,8 @@
             }
 
             .portfolio-image-container {
-              position: relative;
-              width: 100%;
-              min-height: 250px;
-              padding: 0.5rem;
-              overflow: hidden;
+                height: 250px;
+                padding: 0.5rem;
             }
 
             .portfolio-thumbnail {
