--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         .section-subtitle {
             text-align: center;
             font-size: 1.1rem;
-            color: #666;
+            color: white;
             margin-bottom: 3rem;
             max-width: 600px;
             margin-left: auto;
@@ -1021,8 +1021,9 @@
                     <a href="mailto:ranjit.karambalkar@gmail.com">ranjit.karambalkar@gmail.com</a>
                 </div>
                 <div class="contact-item">
-                    <span>📱</span>
-                    <a href="https://wa.me/919028068190">+91-9028068190</a>
+                  <span>📱</span>
+                  <a href="tel:+919028068190">+91-9028068190</a> |
+                  <a href="https://wa.me/919028068190" target="_blank" rel="noopener noreferrer">💬 WhatsApp</a>
                 </div>
                 <div class="contact-item">
                     <span>🔗</span>
