--- a/index.html
+++ b/index.html
@@ -586,7 +586,8 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Ranjit Karambalkar</h1>
-            <p class="subtitle">SQL + Power BI Analyst | 14+ Years Experience</p>
+            <p class="subtitle">SQL + Power BI Analyst | 14+ Years IT Experience</p>
+            <p class="subtitle">3+ Years Focused on Diagnostic Dashboards</p>            
             <p class="tagline">Client-Ready Insights Built for Action, Not Just Analysis</p>
             <div class="cta-buttons">
                 <a href="#portfolio" class="btn btn-primary">View Portfolio</a>
